# xcode-simulator-manager-rs

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
src/: app.rs  events.rs  main.rs  simctl.rs  sizing.rs  ui.rs
