[package]
name = "xcode-simulator-manager-rs"
version = "0.1.0"
edition = "2024"
description = "Terminal UI for managing Xcode simulators (list, boot, shutdown, delete, inspect storage)."
license = "MIT OR Apache-2.0"
repository = "https://github.com/uxsoft/xcode-simulator-manager-rs"
homepage = "https://github.com/uxsoft/xcode-simulator-manager-rs"
readme = "README.md"
keywords = ["xcode", "simulator", "ios", "tui", "ratatui"]
categories = ["command-line-utilities", "development-tools"]

[dependencies]
ratatui = "0.30"
crossterm = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
humansize = "2"
